# moltrade

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
.github/workflows/: relayer-ci.yml
docker/: docker-compose.relayer.yml  docker-compose.trader.yml  relayer.config.toml  trader.config.json
docs/: API.md
relayer/: Cargo.toml  Dockerfile  Makefile  README.md  config.template.toml
relayer/docs/: API.md
relayer/examples/: downstream.rs
relayer/src/: main.rs
relayer/src/api/: metrics.rs  mod.rs  rest_api.rs  websocket.rs
relayer/src/config/: mod.rs
relayer/src/core/: dedupe_engine.rs  downstream.rs  event_router.rs  mod.rs  relay_pool.rs  settlement_worker.rs  subscription.rs
relayer/src/storage/: bloom_filter.rs  memory_cache.rs  mod.rs  rocksdb_store.rs
skills/moltrade/: SKILL.md
tests/relayer/: api_smoke.py
tests/trader/: trader_smoke.py
trader/: README.md  binance_api.py  config.example.json  main.py  requirements.txt
trader/exchanges/: factory.py  polymarket_api.py  uniswap_api.py
trader/nostr/: events.py  publisher.py  signal_service.py
